flex gap fixed, does not work in safari

--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ h1 {
 
 form {
     display: flex;
-    gap: 1rem;
+    /* gap: 1rem; */
     align-items: center;
     z-index: 1;  
 }
@@ -233,7 +233,7 @@ input[type='radio']:checked {
     list-style: none;
     display: flex;
     align-items: center;
-    gap: 1rem;
+    /* gap: 1rem; */
     font-weight: 400;
     color: var(--white);
     letter-spacing: .5px;
@@ -245,6 +245,7 @@ input[type='radio']:checked {
 
 #hot-tags-list li {
     transition: all .2s;
+    margin-right: 1rem;
 }
 
 #hot-tags-list li:hover {
@@ -460,7 +461,7 @@ footer {
     display: none;
     justify-content: center;
     font-size: 1.5rem;
-    gap: 1rem;   
+    /* gap: 1rem;    */
     padding: 2rem 0;
     color: #333;
 }
@@ -471,6 +472,8 @@ footer button {
     font-size: 1.5rem;
     cursor: pointer;
     color: #333;
+    margin-right: 1rem;
+    margin-left: 1rem;
 }
 
 .active {
@@ -481,6 +484,7 @@ footer button {
 
 .numbers {
     padding: 5px 0;
+    margin: 0 .3rem
 }
 
 
